# nppAutoDetectIndent

./: CMakeLists.txt
src/: nppAutoDetectIndent.mm
